Use config file.

--- a/mrcarson-config.linux.json
+++ b/mrcarson-config.linux.json
@@ -1,6 +1,10 @@
 {
     "PluginConfig": {
         "dict": {
+            "cmd": "xdg-open",
+            "url": "https://www.merriam-webster.com/dictionary/"
+        },
+        "slack": {
             "cmd": "xdg-open"
         },
         "file-search": {
