Fix on-load auto input text and add some more applications

--- a/mrcarson-config.mac.json
+++ b/mrcarson-config.mac.json
@@ -7,6 +7,15 @@
         "slack": {
             "cmd": "open"
         },
+        "firefox": {
+            "cmd": "open"
+        },
+        "chrome": {
+            "cmd": "open"
+        },
+        "text-edit": {
+            "cmd": "open"
+        },
         "file-search": {
             "paths": [ "/Users/fan/Documents", "/Users/fan/Downloads", "/Users/fan/Movies", "/Users/fan/Music", "/Users/fan/Pictures", "/Users/fan/Public", "/Users/fan/Desktop" ]
         },
