Reorganize to separate the configuration of plugins from JS code. Add empty trash and sleep features

--- a/mrcarson-config.mac.json
+++ b/mrcarson-config.mac.json
@@ -1,30 +1,156 @@
 {
-    "PluginConfig": {
-        "dict": {
+    "PluginConfig": [
+        {
+             "id": "calculator",
+             "pattern": "^= ",
+             "action": "calculator"
+        },
+        {
+             "id": "amazon",
+             "pattern": "^(a|amazon) ",
+             "action": "webSearch",
+             "url": "https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords="
+        },
+        {
+             "id": "bing",
+             "pattern": "^(b|bing) ",
+             "action": "webSearch",
+             "url": "https://www.bing.com/search?q="
+        },
+        {
+             "id": "google",
+             "pattern": "^(g|google) ",
+             "action": "webSearch",
+             "url": "https://www.google.com/search?q="
+        },
+        {
+             "id": "lucky",
+             "pattern": "^lucky ",
+             "action": "webSearch",
+             "url": "https://www.google.com/search?q=",
+			 "url2": "&btnI"
+        },
+        {
+             "id": "maps",
+             "pattern": "^maps ",
+             "action": "webSearch",
+             "url": "https://www.google.com/maps/search/?api=1&query="
+        },
+        {
+             "id": "youtube",
+             "pattern": "^(yo|youtube) ",
+             "action": "webSearch",
+             "url": "https://www.youtube.com/results?search_query="
+        },
+        {
+             "id": "yahoo",
+             "pattern": "^(y|yahoo) ",
+             "action": "webSearch",
+             "url": "https://search.yahoo.com/search?p="
+        },
+        {
+             "id": "calendar",
+             "pattern": "^(ca|calendar)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "calendar"]
+        },
+        {
+             "id": "dict",
+             "pattern": "^(d|dic) ",
+             "action": "openApp",
             "cmd": "open",
             "url": "dict://"
         },
-        "slack": {
-            "cmd": "open"
+        {
+             "id": "firefox",
+             "pattern": "^(f|firefox)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "firefox"]
         },
-        "firefox": {
-            "cmd": "open"
+        {
+             "id": "google chrome",
+             "pattern": "^(ch|chrome)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "google chrome"]
         },
-        "chrome": {
-            "cmd": "open"
+        {
+             "id": "iterm",
+             "pattern": "^(i|iterm)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "iterm"]
         },
-        "text-edit": {
-            "cmd": "open"
+        {
+             "id": "macvim",
+             "pattern": "^mv$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "macvim"]
         },
-        "file-search": {
+        {
+             "id": "slack",
+             "pattern": "^(sl|slack)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "slack"]
+        },
+        {
+             "id": "safari",
+             "pattern": "^(sa|safari)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "safari"]
+        },
+        {
+             "id": "textedit",
+             "pattern": "^text$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "textedit"]
+        },
+        {
+             "id": "terminal",
+             "pattern": "^(ter|terminal)$",
+             "action": "openApp",
+            "cmd": "open",
+			"params": ["-a", "terminal"]
+        },
+        {
+               "id": "file-search",
+             "pattern": "^'",
+             "action": "fileSearch",
             "paths": [ "/Users/fan/Documents", "/Users/fan/Downloads", "/Users/fan/Movies", "/Users/fan/Music", "/Users/fan/Pictures", "/Users/fan/Public", "/Users/fan/Desktop" ]
         },
-        "file-open": {
+        {
+             "id": "file-open",
+             "pattern": "^\/",
+             "action": "openApp",
             "cmd": "open"
         },
-        "keepass": {
-            "file": "/Users/fan/Documents/stack/Project/test.kdbx",
+        {
+                  "id": "keepass",
+             "pattern": "^k|kee ",
+             "action": "keePassSearch",
+                "file": "/Users/fan/Documents/stack/Project/test.kdbx",
             "password": "kee"
+        },
+        {
+             "id": "empty trash",
+             "pattern": "^et$",
+             "action": "system",
+             "path": ".Trash/*",
+             "message": "Server: Emptying trash..."
+        },
+        {
+             "id": "sleep",
+             "pattern": "^sleep$",
+             "action": "system",
+            "cmd": "pmset",
+			"params": ["sleepnow"],
+             "message": "Server: Sleeping..."
         }
-    }
+    ]
 }
